# rag-learning-lab

./: .gitignore  CLAUDE.md  LICENSE  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yaml  eval.yaml
configs/: base.yaml
configs/experiments/: 01_baseline.yaml  02_semantic_chunking.yaml  03_bge_embeddings.yaml  04_with_reranker.yaml  05_hybrid_retrieval.yaml  06_prompt_variations.yaml  07_llm_comparison.yaml  08_scale_test.yaml  arxiv_auto_scaling.yaml  arxiv_auto_scaling_fast.yaml
crawlers/: arxiv_crawler.py
data/eval_sets/: sample_questions.yaml
deploy/: history.yaml
deploy/aws/: README.md
deploy/aws/terraform/: main.tf  outputs.tf  variables.tf
deploy/gcp/: README.md
deploy/gcp/terraform/: main.tf  outputs.tf  variables.tf
deploy/local/: Dockerfile  docker-compose.yaml  entrypoint.sh
docs/: EXPERIMENT_LOG.md  LEARNINGS.md  PLAN.md  TDD_STEPS.md
notebooks/: 01_understanding_chunking.ipynb  01_understanding_chunking.nbconvert.ipynb  02_embedding_space_viz.ipynb  03_retrieval_deep_dive.ipynb  04_prompt_engineering.ipynb  05_evaluation_analysis.ipynb
scripts/: analyze_ingest.py  ask.py  compare_runs.py  deploy.py  discover_topics.py  discover_topics_hdbscan.py  ingest_docs.py  post_deploy_checks.py  run_experiment.py  run_sweep.py
src/: experiment_runner.py  pipeline.py
src/evaluate/: custom_metrics.py  deepeval_eval.py  mlflow_logger.py  ragas_eval.py
src/generate/: llm_client.py  prompt_templates.py
src/ingest/: chunkers.py  embedders.py  fast_ingestor.py  metrics.py  readers.py
src/retrieve/: hybrid_retriever.py  reranker.py  retriever.py
src/store/: base.py  chroma_store.py  lance_store.py
tests/: conftest.py
tests/eval/: test_ragas_baseline.py
tests/integration/: test_experiment_runner.py  test_ingest_pipeline.py  test_query_pipeline.py
tests/security/: promptfoo-config.yaml
tests/unit/: test_ask.py  test_chunkers.py  test_custom_metrics.py  test_deploy.py  test_embedders.py  test_eval_harness.py  test_fast_ingestor.py  test_ingest_metrics.py  test_prompt_templates.py  test_readers.py  test_retriever.py
(+6 files in other folders)
